# qfeed-ai-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: AI-CICD.yml
core/: config.py  dependencies.py  logging.py  mongodb.py  tracing.py
exceptions/: error_messages.py  handlers.py
graphs/feedback/: feedback_graph.py  state.py
graphs/nodes/: feedback_generator.py  (+9 more)
prompts/: __init__.py  bad_case.py  feedback.py  feedback_practice_mode.py  feedback_realmode.py  follow_up.py  new_topic.py  pf_analysis.py  pf_question_pool.py  practice_answer_analysis.py  question_router.py  rubric.py  session_end_intent.py  topic_summarizer.py
repositories/: interview_turn_analysis_repo.py  pf_repo.py  session_topic_summary_repo.py  user_weakness_profile_repo.py
routers/: feedback.py  portfolio.py  question.py  stt.py  tts.py
schemas/: feedback.py  feedback_v2.py  interview_turn_analyses.py  pf_analysis_profiles.py  pf_question_pools.py  portfolio.py  question.py  seesion_topic_summaries.py  stt.py  tts.py  user_weakness_profiles.py
scripts/: run_weakness_batch.py
services/: bad_case_checker.py  feedback_service.py  pf_profile_generator.py  pf_qpool_generator.py  portfolio_analysis_service.py  qpool_selector.py  question_generate_service.py  rubric_scorer.py  session_end_detector.py  stt_service.py  topic_summary_builder.py  tts_service.py  turn_analysis_builder.py  weakness_batch_service.py
taxonomy/: cs_categories.yaml  loader.py  pf_aspects.yaml  pf_tech_canonical.yaml
tests/: README.md
utils/: img_loader.py
(+89 files in other folders)
